# RL-Vec

./: .gitignore  colab_eval_cell.py  colab_rl_training.ipynb  colab_run_sft.py  colab_sft_training.ipynb  convert_resplan.py  fix_and_rebuild.py  pyproject.toml  requirements.txt
config/easyr1/: floorplan.jinja  qwen2_5_vl_3b_grpo.yaml  qwen3_vl_8b_archcad_grpo.yaml  qwen3_vl_8b_grpo.yaml
config/experiment/: domain_adaptation.yaml  grpo_tower.yaml  grpo_tower_3b.yaml  mixed_training.yaml
config/model/: qwen2_5_vl_3b.yaml  qwen3_vl_8b.yaml
config/reward/: ensemble.yaml
docs/: training_debug_log.md
notebooks/: diagnostic_experiments.ipynb
scripts/: analyze_data.py  download_data.py  easyr1_reward.py  export_for_cad.py  local_sft_pipeline.sh  prepare_archcad_data.py  prepare_deepsvg.sh  prepare_easyr1_data.py  prepare_resplan.sh  prepare_sft_data.py  prepare_svgstack.py  prepare_svgstack.sh  prepare_tower_data.py  run_experiment.py  run_mixed_training.py  test_grpo.py  test_qwen3_vl.py  test_remaining.py  test_reward.py  train_diag_grid.py  train_diag_roomcount.py  train_grpo_3b.sh  train_grpo_8b.sh  train_grpo_archcad.sh  train_rl_diffvg.py  train_rl_grpo.py  train_sft.py
src/rl_vectorizer/: __init__.py  config.py
src/rl_vectorizer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rl_vectorizer/curriculum/: curriculum_manager.py
src/rl_vectorizer/data/: __init__.py  dataset.py  mixed_dataset.py  resplan_dataset.py  svgstack_dataset.py  synthetic_generator.py  tower_dataset.py
src/rl_vectorizer/evaluation/: evaluator.py
(+33 files in other folders)
