[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-vectorizer"
version = "0.1.0"
description = "Reward-driven raster-to-vector training toolkit for engineering drawings."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.1.0",
  "transformers>=4.40.0",
  "peft>=0.10.0",
  "accelerate>=0.27.0",
  "datasets>=2.18.0",
  "pillow>=10.0.0",
  "numpy>=1.24.0",
  "scikit-image>=0.22.0",
  "opencv-python>=4.9.0",
  "lxml>=5.1.0",
  "cairosvg>=2.7.0",
  "hydra-core>=1.3.0",
  "omegaconf>=2.3.0",
  "tensorboard>=2.16.0",
  "tqdm>=4.66.0",
  "requests>=2.31.0",
]

[project.optional-dependencies]
training = [
  "bitsandbytes>=0.41.0",
  "open-clip-torch>=2.24.0",
]
dev = [
  "pytest>=8.0.0",
]
segmentation = [
  "segment-anything",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rl_vectorizer*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
